[package]
name = "carrier"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
hole_punch = { git = "https://github.com/bkchr/hole_punch", branch="master" }
tokio-serde-json = "0.2"
futures = "0.1"
failure = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-file-unix = "0.5"
bytes = "0.4"
glob = "0.2"
openssl = "^0.10.6"
structopt = "0.2"
pretty_env_logger = "0.3"
log = "0.4"

[patch.crates-io]
tokio = { git = "https://github.com/bkchr/tokio.git", branch = "protocol_switch_without_loosing_data" }
tokio-executor = { git = "https://github.com/bkchr/tokio.git", branch = "protocol_switch_without_loosing_data" }
tokio-io = { git = "https://github.com/bkchr/tokio.git", branch = "protocol_switch_without_loosing_data" }
tokio-reactor = { git = "https://github.com/bkchr/tokio.git", branch = "protocol_switch_without_loosing_data" }

[profile.release]
panic = "abort"
